# zed-auto-file-header

./: .auto-header.toml  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CROSS_PLATFORM_CHECKLIST.md  Cargo.toml  DEV_TESTING.md  LANGUAGES.md  LICENSE  PLATFORM_SUPPORT.md  PUBLISHING.md  PUBLISHING_old.md  QUICKSTART.md  README.md  README_CN.md  TESTING.md  build-dev.sh  bump-version.sh  check-version.sh  extension.toml
.github/workflows/: ci.yml  release.yml
extension/: Cargo.toml  extension.toml
extension/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
src/: lib.rs
