[package]
name = "auto-header-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "auto-header-server"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1.35", features = ["full"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
