[package]
name = "auto-header-server"
version = "0.2.6"
edition = "2021"
authors = ["MrAMS <2421653893@qq.com>"]
license = "MIT"
repository = "https://github.com/MrAMS/zed-auto-file-header"

[[bin]]
name = "auto-header-server"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1.35", features = ["full"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
